--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,12 @@
   <input type="text" placeholder="Last Name" formControlName="lastName">
   <input type="text" placeholder="Birth Year" formControlName="birthYear">
   <input type="text" placeholder="Year of death" formControlName="deathYear">
+  <input type="text" placeholder="Comment" formControlName="comment">
   <input type="submit" value="submit">
 </form>
 <div>
   <div *ngFor="let data of data1">
-    <p>First Name: {{ data.firstName }} | Last name: {{ data.lastName }} | Birth Year: {{ data.birthYear }} | Year of Death: {{ data.deathYear }}</p>
+    <p>First Name: {{ data.firstName }} | Last name: {{ data.lastName }} | Birth Year: {{ data.birthYear }} | Year of Death: {{ data.deathYear }} | Comment: {{ data.comment }}</p>
   </div>
 </div>
 
